--- a/index.html
+++ b/index.html
@@ -5,8 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body> 
-    hello
+<body>
+    <div class="navbar">
+
+        <div class="name">Shitiz Aggarwal</div>
+            <ul class = "links">
+                <li><a href="">Work</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="" id = "contact">CONTACT</a></li>
+            </ul>
+    </div>
+    <div class="main">
+        <div class="content">
+            <div class="title">Hey there, We are Saksham and Prakhar  👋</div>
+            <div class="description">Building digital products, brands and experience</div>
+        </div>
+        <button class="connect">CONNECT WITH ME</button>
+    </div>
+
+
+    <div class="arrow-container">
+        <div class="arrow">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHuc0R5cNPvRRHIChZojR31U3e6SjG_Xher87HXTKCJQ&s" alt="" srcset="">
+        </div>
+    </div>
+    <hr id = "line">
+
+    <div class="last">
+        <div class="frame">
+            <div class="heading">
+                <h1 class = "idea">Have an idea?</h1>
+                <h1 class = "talk">Let's Talk ↗</h1>
+            </div>
+            <div class="pic"><img src="Saly-11.png" alt=""></div>
+        </div>
+        <div class="contact">
+            <div class="email"><a href = "">prakharsharma@duck.com</a></div>
+            <div class="social">
+                <ul>
+                    <li>Instagram</li>
+                    <li>Dribble</li>
+                    <li>Behance</li>
+                </ul>
+                <ul class="list2">
+                    <li>Twitter</li>
+                    <li>Facebook</li>
+                    <li>Youtube</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
